Some UI fixes for the active link on toolbar, and add a zindex to be sure that the toolbar when on mobile device is always on top of all pages.

--- a/front/src/app/components/toolbar/toolbar.component.scss
+++ b/front/src/app/components/toolbar/toolbar.component.scss
@@ -7,6 +7,7 @@
   border-bottom: 1px solid black;
   background-color: white;
   width: 100%;
+  z-index: 1000;
 }
 
 .logo {
@@ -51,6 +52,16 @@
 .menu a:hover {
   font-weight: bold;
   color: black;
+}
+
+.menu a.active {
+  color: blue;
+  text-decoration: none;
+}
+
+/* Additional styling for hover state */
+.menu a:not(.active):hover {
+  text-decoration: underline; /* Underline on hover for inactive links */
 }
 
 a img:hover {
